fix(data-table): remove inline edit short table styles (#8212)
* fix(data-table): remove inline edit short table styles

* docs(DataTable): add test column for inline select

* fix(data-table): add form input bgc overrides

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -141,6 +141,19 @@
     }
   }
 
+  // Form Control Overrides
+  .#{$prefix}--list-box input[role='combobox'],
+  .#{$prefix}--list-box input[type='text'],
+  .#{$prefix}--dropdown,
+  .#{$prefix}--list-box,
+  .#{$prefix}--number input[type='number'],
+  .#{$prefix}--number__control-btn::before,
+  .#{$prefix}--number__control-btn::after,
+  .#{$prefix}--text-input,
+  .#{$prefix}--select-input {
+    background-color: $field-02;
+  }
+
   // Overflow Menu Overrides
   .#{$prefix}--data-table
     td.#{$prefix}--table-column-menu
