--- a/packages/components/src/components/text-input/_text-input.scss
+++ b/packages/components/src/components/text-input/_text-input.scss
@@ -300,22 +300,22 @@
   // Inline Text Input
   //-----------------------------
 
-  .#{$prefix}--text-input-wrapper--inline {
+  .#{$prefix}--text-input-wrapper.#{$prefix}--text-input-wrapper--inline {
     flex-flow: row wrap;
   }
 
-  .#{$prefix}--label--inline {
+  .#{$prefix}--text-input-wrapper .#{$prefix}--label--inline {
     flex: 1;
     margin: rem(13px) 0 0 0;
     word-break: break-word;
     overflow-wrap: break-word;
   }
 
-  .#{$prefix}--label--inline--sm {
+  .#{$prefix}--text-input-wrapper .#{$prefix}--label--inline--sm {
     margin-top: rem(9px);
   }
 
-  .#{$prefix}--label--inline--xl {
+  .#{$prefix}--text-input-wrapper .#{$prefix}--label--inline--xl {
     margin-top: rem(17px);
   }
 
@@ -327,7 +327,7 @@
     overflow-wrap: break-word;
   }
 
-  .#{$prefix}--form__helper-text--inline {
+  .#{$prefix}--text-input-wrapper .#{$prefix}--form__helper-text--inline {
     margin-top: rem(2px);
   }
 
