feat(feature-flags): add enable-2021-release flag (#8298)
* feat(feature-flags): add enable-2021-release flag

* Update feature-flags.yml

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/globals/scss/_feature-flags.scss
+++ b/packages/components/src/globals/scss/_feature-flags.scss
@@ -33,6 +33,7 @@ $default-feature-flags: (
   grid-columns-16: false,
   grid--fallback: false,
   enable-css-custom-properties: false,
+  enable-2021-release: false,
 );
 
 $feature-flags: map-merge($default-feature-flags, $feature-flags);
