fix(date-picker): reduce gap between range inputs (#8304)
* fix(date-picker): reduce gap between range picker inputs

* refactor: lint and fix flatpickr styles

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/date-picker/_date-picker.scss
+++ b/packages/components/src/components/date-picker/_date-picker.scss
@@ -13,6 +13,8 @@
 @import '../form/form';
 @import 'flatpickr.scss';
 
+@include flatpickr;
+
 /// Date picker styles
 /// @access private
 /// @group date-picker
@@ -170,7 +172,7 @@
 
   .#{$prefix}--date-picker--range
     > .#{$prefix}--date-picker-container:first-child {
-    margin-right: rem(2px);
+    margin-right: rem(1px);
   }
 
   .#{$prefix}--date-picker--range .#{$prefix}--date-picker-container,
