--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -71,7 +71,7 @@
     top: 0;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
     width: 100%;
     height: 100%;
     max-height: 100%;
