--- a/packages/components/src/globals/scss/_feature-flags.scss
+++ b/packages/components/src/globals/scss/_feature-flags.scss
@@ -38,6 +38,21 @@ $default-feature-flags: (
 
 $feature-flags: map-merge($default-feature-flags, $feature-flags);
 
+@if feature-flag-enabled('enable-2021-release') == true {
+  @if variable-exists(css--disable-css-custom-properties) ==
+    false or
+    $css--disable-css-custom-properties ==
+    false
+  {
+    $feature-flags: map-merge(
+      $feature-flags,
+      (
+        enable-css-custom-properties: true,
+      )
+    );
+  }
+}
+
 @if map-get($feature-flags, grid) != true {
   // We supported a flag for experimental grid in the past that we want to keep
   // supporting till our next major release. These two @if statements will assign
