feat(tokens): new token update pt. 1 (#8269)
* feat: add new tokens to tokens.js

* style(ContentSwitcher): update to new tokens

* style(ContextMenu): update to new tokens

* style(CopyButton): update to new tokens

* style(DataTable): update data-table-action to new tokens

* style(DataTable): update data-table-core to new tokens

* style(DataTable): update data-table-expandable to new tokens

* style(DataTable): update data-table-sort to new tokens

* style(DatePicker): update date-picker to use new tokens

* style(Dropdown): update dropdown to use new tokens

* style(Dropdown): dropdown items should use layer not field

* style(ContextMenu): update danger tokens

* feat(DataTable): update DataTable tokens

* style(DataTable): use new LayerAccent token

Co-authored-by: Josefina Mancilla <josefinanoemi4@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/context-menu/_context-menu.scss
+++ b/packages/components/src/components/context-menu/_context-menu.scss
@@ -21,7 +21,7 @@
     min-width: 13rem;
     max-width: 18rem;
     padding: $spacing-02 0;
-    background-color: $ui-01;
+    background-color: $layer;
     visibility: hidden;
   }
 
@@ -40,8 +40,8 @@
   .#{$prefix}--context-menu-option {
     position: relative;
     height: $spacing-07;
-    color: $text-01;
-    background-color: $ui-01;
+    color: $text-primary;
+    background-color: $layer;
     cursor: pointer;
     transition: background-color $duration--fast-01 motion(standard, productive);
 
@@ -52,13 +52,13 @@
 
   .#{$prefix}--context-menu-option--active,
   .#{$prefix}--context-menu-option:hover {
-    background-color: $hover-ui;
+    background-color: $layer-hover;
   }
 
   .#{$prefix}--context-menu-option--danger:hover,
   .#{$prefix}--context-menu-option--danger:focus {
-    color: $text-04;
-    background-color: $danger-01;
+    color: $text-on-color;
+    background-color: $button-danger-primary;
   }
 
   .#{$prefix}--context-menu-option > .#{$prefix}--context-menu {
@@ -74,8 +74,8 @@
   }
 
   .#{$prefix}--context-menu-option__content--disabled {
-    color: $disabled-02;
-    background-color: $ui-01;
+    color: $text-disabled;
+    background-color: $layer;
     cursor: not-allowed;
   }
 
@@ -113,7 +113,7 @@
     width: 100%;
     height: 1px;
     margin: $spacing-02 0;
-    background-color: $ui-03;
+    background-color: $border-subtle;
   }
 }
 
