--- a/packages/components/src/components/data-table/_data-table-inline-edit.scss
+++ b/packages/components/src/components/data-table/_data-table-inline-edit.scss
@@ -47,7 +47,7 @@
 
   .#{$prefix}--inline-edit-label__icon {
     opacity: 0;
-    fill: $ui-05;
+    fill: $icon-primary;
   }
 
   .#{$prefix}--inline-edit-input {
