feat(Tokens): update color tokens pt. 2 (#8326)
* feat(FileUploader): begin updating color tokens

* feat(FileUploader): update color tokens

* feat(Form): update color tokens

* feat(InlineLoading): update color tokens

* feat(Link): update link styles

* feat(ListBox): update color tokens

* feat(Loading): update color tokens

* feat(Modal): update color tokens

* feat(MultiSelect): update color tokens

* feat(Notification): update color tokens

* feat(NumberInput): update color tokens

* style(Tokens): replace layer-alt, fix focus-inverse spelling

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -75,15 +75,15 @@ $list-box-menu-width: rem(300px);
     width: $list-box-width;
     height: rem(40px);
     max-height: rem(40px);
-    color: $text-01;
-    background-color: $field-01;
+    color: $text-primary;
+    background-color: $field;
     border: none;
-    border-bottom: 1px solid $ui-04;
+    border-bottom: 1px solid $border-strong;
     cursor: pointer;
     transition: all $duration--fast-01 motion(standard, productive);
 
     &:hover {
-      background-color: $hover-ui;
+      background-color: $field-hover;
     }
   }
 
@@ -98,13 +98,14 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box--expanded {
-    border-bottom-color: $ui-03;
+    border-bottom-color: $border-subtle;
   }
 
   .#{$prefix}--list-box--expanded:hover {
-    background-color: $field-01;
+    background-color: $field;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--list-box--expanded:hover.#{$prefix}--list-box--light:hover {
     background-color: $field-02;
   }
@@ -120,11 +121,11 @@ $list-box-menu-width: rem(300px);
     top: 50%;
     right: $carbon--spacing-08;
     transform: translateY(-50%);
-    fill: $support-01;
+    fill: $support-error;
   }
 
   .#{$prefix}--list-box__invalid-icon--warning {
-    fill: $support-03;
+    fill: $support-warning;
   }
 
   .#{$prefix}--list-box__invalid-icon--warning path[fill] {
@@ -145,6 +146,7 @@ $list-box-menu-width: rem(300px);
   }
 
   // Light variation for 'list-box'
+  // V11: Possibly deprecate
   .#{$prefix}--list-box--light {
     background-color: $field-02;
 
@@ -153,10 +155,12 @@ $list-box-menu-width: rem(300px);
     }
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--list-box--light .#{$prefix}--list-box__menu {
     background: $field-02;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--list-box--light .#{$prefix}--list-box__menu-item__option {
     border-top-color: $decorative-01;
   }
@@ -167,9 +171,10 @@ $list-box-menu-width: rem(300px);
 
   // Disabled state for `list-box`
   .#{$prefix}--list-box--disabled:hover {
-    background-color: $field-01;
+    background-color: $field;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--list-box--light.#{$prefix}--list-box--disabled {
     background-color: $field-02;
   }
@@ -184,12 +189,12 @@ $list-box-menu-width: rem(300px);
   .#{$prefix}--list-box--disabled .#{$prefix}--list-box__label,
   .#{$prefix}--list-box--disabled.#{$prefix}--list-box--inline
     .#{$prefix}--list-box__label {
-    color: $disabled-02;
+    color: $text-disabled;
   }
 
   .#{$prefix}--list-box--disabled .#{$prefix}--list-box__menu-icon > svg,
   .#{$prefix}--list-box--disabled .#{$prefix}--list-box__selection > svg {
-    fill: $disabled-02;
+    fill: $icon-disabled;
 
     // Windows, Firefox HCM Fix
     @media screen and (-ms-high-contrast: active),
@@ -209,7 +214,7 @@ $list-box-menu-width: rem(300px);
   .#{$prefix}--list-box--disabled .#{$prefix}--list-box__menu-item:hover,
   .#{$prefix}--list-box--disabled
     .#{$prefix}--list-box__menu-item--highlighted {
-    color: $disabled-02;
+    color: $text-disabled;
     text-decoration: none;
   }
 
@@ -234,7 +239,7 @@ $list-box-menu-width: rem(300px);
     border-width: 0;
 
     &:hover {
-      background-color: $hover-ui;
+      background-color: $field-hover;
     }
   }
 
@@ -252,7 +257,7 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box.#{$prefix}--list-box--inline.#{$prefix}--list-box--expanded:hover {
-    background-color: $field-02;
+    background-color: transparent;
   }
 
   .#{$prefix}--list-box.#{$prefix}--list-box--inline
@@ -271,7 +276,7 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box--inline .#{$prefix}--list-box__label {
-    color: $text-01;
+    color: $text-primary;
   }
 
   .#{$prefix}--list-box--inline .#{$prefix}--list-box__field {
@@ -321,7 +326,7 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box__field[disabled] {
-    color: $disabled-02;
+    color: $text-disabled;
     outline: none;
   }
 
@@ -385,7 +390,7 @@ $list-box-menu-width: rem(300px);
     @include type-style('body-short-01');
 
     overflow: hidden;
-    color: $text-01;
+    color: $text-primary;
     white-space: nowrap;
     text-overflow: ellipsis;
     user-select: none;
@@ -408,7 +413,7 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box__menu-icon > svg {
-    fill: $icon-01;
+    fill: $icon-primary;
 
     // Windows, Firefox HCM Fix
     @media screen and (-ms-high-contrast: active),
@@ -452,7 +457,7 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box__selection > svg {
-    fill: $icon-01;
+    fill: $icon-primary;
 
     // Windows, Firefox HCM Fix
     @media screen and (-ms-high-contrast: active),
@@ -481,9 +486,9 @@ $list-box-menu-width: rem(300px);
     padding: rem(8px);
     // Align with hover circle of X button
     padding-right: rem(2px);
-    color: $inverse-01;
+    color: $text-inverse;
     line-height: 0;
-    background-color: $inverse-02;
+    background-color: $background-inverse;
     border-radius: rem(12px);
     transform: none;
 
@@ -499,10 +504,10 @@ $list-box-menu-width: rem(300px);
     height: rem(20px);
     margin-left: rem(4px);
     padding: rem(2px);
-    fill: $inverse-01;
+    fill: $icon-inverse;
 
     &:hover {
-      background-color: $hover-secondary;
+      background-color: $button-secondary-hover;
       border-radius: 50%;
     }
 
@@ -515,10 +520,10 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box--disabled .#{$prefix}--list-box__selection--multi {
-    @include tag-theme($disabled-02, $disabled-01);
+    @include tag-theme($text-disabled, $field-disabled);
 
     > svg {
-      fill: $disabled-01;
+      fill: $icon-disabled;
 
       &:hover {
         background-color: initial;
@@ -547,7 +552,7 @@ $list-box-menu-width: rem(300px);
     z-index: z('dropdown');
     width: $list-box-width;
     overflow-y: auto;
-    background-color: $ui-01;
+    background-color: $layer;
     transition: max-height $duration--fast-02 motion(standard, productive);
 
     &:focus {
@@ -585,20 +590,21 @@ $list-box-menu-width: rem(300px);
 
     position: relative;
     height: rem(40px);
-    color: $text-02;
+    color: $text-secondary;
     cursor: pointer;
     transition: background $duration--fast-01 motion(standard, productive);
     user-select: none;
 
     &:hover {
-      background-color: $hover-ui;
+      background-color: $layer-hover;
     }
 
     &:active {
-      background-color: $selected-ui;
+      background-color: $layer-selected;
     }
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--list-box--light .#{$prefix}--list-box__menu-item:hover {
     background-color: $hover-light-ui;
   }
@@ -615,13 +621,14 @@ $list-box-menu-width: rem(300px);
     background-color: transparent;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--list-box--light .#{$prefix}--list-box__menu-item:active {
     background-color: $selected-light-ui;
   }
 
   .#{$prefix}--list-box--disabled
     .#{$prefix}--list-box__menu-item__option:hover {
-    border-top-color: $ui-03;
+    border-top-color: $border-subtle;
   }
 
   .#{$prefix}--list-box__menu-item:first-of-type
@@ -631,7 +638,7 @@ $list-box-menu-width: rem(300px);
 
   .#{$prefix}--list-box__menu-item:hover
     .#{$prefix}--list-box__menu-item__option {
-    color: $text-01;
+    color: $text-primary;
   }
 
   .#{$prefix}--list-box__menu-item:hover
@@ -644,7 +651,7 @@ $list-box-menu-width: rem(300px);
     .#{$prefix}--list-box__menu-item:hover
     + .#{$prefix}--list-box__menu-item
     .#{$prefix}--list-box__menu-item__option {
-    border-top-color: $ui-03;
+    border-top-color: $border-subtle;
   }
 
   .#{$prefix}--list-box__menu-item__option {
@@ -656,14 +663,14 @@ $list-box-menu-width: rem(300px);
     padding: rem(11px) 0;
     padding-right: $carbon--spacing-06;
     overflow: hidden;
-    color: $text-02;
+    color: $text-secondary;
     font-weight: normal;
     line-height: 1rem;
     white-space: nowrap;
     text-decoration: none;
     text-overflow: ellipsis;
     border-top: 1px solid transparent;
-    border-top-color: $ui-03;
+    border-top-color: $border-subtle;
     border-bottom: 1px solid transparent;
     transition: border-color $duration--fast-01 motion(standard, productive),
       color $duration--fast-01 motion(standard, productive);
@@ -684,7 +691,7 @@ $list-box-menu-width: rem(300px);
     }
 
     &:hover {
-      color: $text-01;
+      color: $text-primary;
       border-color: transparent;
     }
   }
@@ -705,7 +712,7 @@ $list-box-menu-width: rem(300px);
     .#{$prefix}--list-box__menu-item:hover
     .#{$prefix}--list-box__menu-item__option,
   .#{$prefix}--list-box--disabled .#{$prefix}--list-box__menu-item__option {
-    color: $disabled-02;
+    color: $text-disabled;
   }
 
   .#{$prefix}--list-box.#{$prefix}--list-box--inline
@@ -720,8 +727,8 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box__menu-item--highlighted {
-    color: $text-01;
-    background-color: $hover-ui;
+    color: $text-primary;
+    background-color: $layer-hover;
     border-color: transparent;
 
     // Windows, Firefox HCM Fix
@@ -742,15 +749,16 @@ $list-box-menu-width: rem(300px);
 
   .#{$prefix}--list-box__menu-item--highlighted
     .#{$prefix}--list-box__menu-item__option {
-    color: $text-01;
+    color: $text-primary;
   }
 
   .#{$prefix}--list-box__menu-item--active {
-    color: $text-01;
-    background-color: $selected-ui;
-    border-bottom-color: $selected-ui;
+    color: $text-primary;
+    background-color: $layer-selected;
+    border-bottom-color: $layer-selected;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--list-box--light .#{$prefix}--list-box__menu-item--active {
     background-color: $selected-light-ui;
     border-bottom-color: $selected-light-ui;
@@ -758,13 +766,13 @@ $list-box-menu-width: rem(300px);
 
   .#{$prefix}--list-box__menu-item--active:hover,
   .#{$prefix}--list-box__menu-item--active.#{$prefix}--list-box__menu-item--highlighted {
-    background-color: $selected-ui;
-    border-bottom-color: $selected-ui;
+    background-color: $layer-selected;
+    border-bottom-color: $layer-selected;
   }
 
   .#{$prefix}--list-box__menu-item--active
     .#{$prefix}--list-box__menu-item__option {
-    color: $text-01;
+    color: $text-primary;
   }
 
   // Hide top border if previous list item is selected
@@ -780,7 +788,7 @@ $list-box-menu-width: rem(300px);
     right: rem(16px);
     display: none;
     transform: translateY(-50%);
-    fill: $icon-01;
+    fill: $icon-primary;
   }
 
   .#{$prefix}--list-box--inline
