--- a/packages/components/src/components/form/_form.scss
+++ b/packages/components/src/components/form/_form.scss
@@ -43,7 +43,7 @@
 
     display: inline-block;
     margin-bottom: $carbon--spacing-03;
-    color: $text-02;
+    color: $text-secondary;
     font-weight: $input-label-weight;
     line-height: 1rem;
     vertical-align: baseline;
@@ -166,19 +166,19 @@
     // Added to prevent error text from displaying under helper text in Safari (#6392)
     width: 100%;
     margin-top: $carbon--spacing-02;
-    color: $text-02;
+    color: $text-secondary;
     opacity: 1;
   }
 
   .#{$prefix}--label--disabled,
   .#{$prefix}--form__helper-text--disabled {
-    color: $disabled-02;
+    color: $text-disabled;
   }
 
   // If a FormGroup is disabled, Form labels and helper text nested inside should also be disabled
   fieldset[disabled] .#{$prefix}--label,
   fieldset[disabled] .#{$prefix}--form__helper-text {
-    color: $disabled-02;
+    color: $text-disabled;
   }
 }
 
