--- a/packages/components/src/components/number-input/_number-input.scss
+++ b/packages/components/src/components/number-input/_number-input.scss
@@ -36,12 +36,12 @@
     height: rem(40px);
     padding-right: rem(128px);
     padding-left: $carbon--spacing-05;
-    color: $text-01;
+    color: $text-primary;
     font-weight: 300;
     font-family: carbon--font-family('mono');
-    background-color: $field-01;
+    background-color: $field;
     border: 0;
-    border-bottom: rem(1px) solid $ui-04;
+    border-bottom: rem(1px) solid $border-strong;
     border-radius: 0;
     transition: background-color $duration--fast-01 motion(standard, productive),
       outline $duration--fast-01 motion(standard, productive);
@@ -59,7 +59,7 @@
     }
 
     &:disabled ~ .#{$prefix}--number__controls svg {
-      fill: $disabled;
+      fill: $icon-disabled;
     }
 
     // IE: Hide "clear-field" `x` button on input field
@@ -83,8 +83,8 @@
 
   .#{$prefix}--number input[type='number']:disabled,
   .#{$prefix}--number--readonly input[type='number'] {
-    color: $disabled;
-    background-color: $disabled-01;
+    color: $text-disabled;
+    background-color: $field-disabled;
     border-bottom-color: transparent;
     cursor: not-allowed;
   }
@@ -126,8 +126,8 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    color: $icon-01;
-    border-bottom: rem(1px) solid $ui-04;
+    color: $icon-primary;
+    border-bottom: rem(1px) solid $border-strong;
 
     &::before,
     &::after {
@@ -137,7 +137,7 @@
       width: rem(2px);
       // height: calc(100% - 4px) is calculated differently in Safari
       height: rem(36px);
-      background-color: $field-01;
+      background-color: $field;
       content: '';
     }
 
@@ -156,19 +156,19 @@
     &:focus {
       @include focus-outline;
 
-      color: $icon-01;
+      color: $icon-primary;
       outline-width: 2px;
       outline-offset: -2px;
     }
 
     &:hover {
-      color: $icon-01;
-      background-color: $hover-ui;
+      color: $icon-primary;
+      background-color: $field-hover;
       cursor: pointer;
 
       &::before,
       &::after {
-        background-color: $hover-ui;
+        background-color: $field-hover;
       }
     }
 
@@ -180,7 +180,7 @@
     }
 
     &:disabled {
-      color: $disabled;
+      color: $text-disabled;
       border-bottom-color: transparent;
       cursor: not-allowed;
     }
@@ -235,7 +235,7 @@
     input[type='number'][data-invalid]
     ~ .#{$prefix}--number__controls
     .#{$prefix}--number__control-btn.up-icon::after {
-    background-color: $support-01;
+    background-color: $support-error;
   }
 
   .#{$prefix}--number
@@ -254,7 +254,7 @@
     z-index: z('overlay');
     width: rem(1px);
     height: rem(16px);
-    background-color: $ui-03;
+    background-color: $border-subtle;
 
     &:first-of-type {
       order: 0;
@@ -271,9 +271,10 @@
   .#{$prefix}--number__invalid
     + .#{$prefix}--number__controls
     .#{$prefix}--number__rule-divider:first-of-type {
-    background-color: $ui-03;
+    background-color: $border-subtle;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--number--light .#{$prefix}--number__rule-divider,
   .#{$prefix}--number--light
     .#{$prefix}--number__invalid
@@ -293,7 +294,7 @@
     input[type='number']:disabled
     + .#{$prefix}--number__controls
     .#{$prefix}--number__rule-divider {
-    background-color: $disabled-02;
+    background-color: $icon-disabled;
   }
 
   .#{$prefix}--number__control-btn:focus ~ .#{$prefix}--number__rule-divider {
@@ -307,7 +308,7 @@
   .#{$prefix}--number__invalid {
     position: absolute;
     right: rem(96px);
-    fill: $support-01;
+    fill: $support-error;
   }
 
   .#{$prefix}--number--xl .#{$prefix}--number__invalid {
@@ -347,7 +348,7 @@
   }
 
   .#{$prefix}--number__invalid--warning {
-    fill: $support-03;
+    fill: $support-warning;
   }
 
   .#{$prefix}--number__invalid--warning path:first-of-type {
@@ -355,10 +356,12 @@
     fill: $carbon__black-100;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--number--light input[type='number'] {
     background-color: $field-02;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--number--light input[type='number']:disabled,
   .#{$prefix}--number--light
     .#{$prefix}--number--readonly
@@ -366,6 +369,7 @@
     background-color: $field-02;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--number--light .#{$prefix}--number__control-btn::before,
   .#{$prefix}--number--light .#{$prefix}--number__control-btn::after {
     background-color: $field-02;
@@ -376,6 +380,7 @@
     background-color: transparent;
   }
 
+  // V11: Possibly deprecate
   .#{$prefix}--number--light .#{$prefix}--number__control-btn:hover,
   .#{$prefix}--number--light .#{$prefix}--number__control-btn:hover::before,
   .#{$prefix}--number--light .#{$prefix}--number__control-btn:hover::after {
