feat(React): updates to size prop (#8160)
* feat(Accordion): update size prop names

* feat(ListBox): update size prop for Listbox components

* test(snapshot): update snapshot tests

* feat(DatePicker): update size prop names

* feat(link): update story, add md to size

* feat(Modal): update size props

* feat(NumberInput): update size prop

* feat(OverflowMenu): update size prop

* feat(Select): update size prop

* feat(Inputs): update size props

* test(snapshot): update snapshot tests

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/date-picker/_date-picker.scss
+++ b/packages/components/src/components/date-picker/_date-picker.scss
@@ -118,7 +118,9 @@
   }
 
   // Size variant styles
-  .#{$prefix}--date-picker__input--xl {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--date-picker__input--xl,
+  .#{$prefix}--date-picker__input--lg {
     height: rem(48px);
   }
 
