--- a/packages/components/src/components/number-input/_number-input.scss
+++ b/packages/components/src/components/number-input/_number-input.scss
@@ -73,7 +73,9 @@
     }
   }
 
-  .#{$prefix}--number--xl.#{$prefix}--number input[type='number'] {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--number--xl.#{$prefix}--number input[type='number'],
+  .#{$prefix}--number--lg.#{$prefix}--number input[type='number'] {
     padding-right: rem(144px);
   }
 
@@ -311,7 +313,9 @@
     fill: $support-error;
   }
 
-  .#{$prefix}--number--xl .#{$prefix}--number__invalid {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--number--xl .#{$prefix}--number__invalid,
+  .#{$prefix}--number--lg .#{$prefix}--number__invalid {
     right: rem(112px);
   }
 
@@ -324,7 +328,11 @@
     right: rem(80px);
   }
 
+  // TODO V11: Remove xl selector
   .#{$prefix}--number--xl
+    .#{$prefix}--number__invalid
+    + .#{$prefix}--number__rule-divider,
+  .#{$prefix}--number--lg
     .#{$prefix}--number__invalid
     + .#{$prefix}--number__rule-divider {
     right: rem(96px);
@@ -388,15 +396,21 @@
   }
 
   // Size Variant styles
-  .#{$prefix}--number--xl input[type='number'] {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--number--xl input[type='number'],
+  .#{$prefix}--number--lg input[type='number'] {
     height: rem(48px);
   }
 
-  .#{$prefix}--number--xl .#{$prefix}--number__controls {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--number--xl .#{$prefix}--number__controls,
+  .#{$prefix}--number--lg .#{$prefix}--number__controls {
     width: rem(96px);
   }
 
-  .#{$prefix}--number--xl .#{$prefix}--number__control-btn {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--number--xl .#{$prefix}--number__control-btn,
+  .#{$prefix}--number--lg .#{$prefix}--number__control-btn {
     width: rem(48px);
 
     &::before,
