--- a/packages/components/src/components/content-switcher/_content-switcher.scss
+++ b/packages/components/src/components/content-switcher/_content-switcher.scss
@@ -26,7 +26,9 @@
     height: rem(32px);
   }
 
-  .#{$prefix}--content-switcher--xl {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--content-switcher--xl,
+  .#{$prefix}--content-switcher--lg {
     height: rem(48px);
   }
 
