--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -87,7 +87,9 @@ $list-box-menu-width: rem(300px);
     }
   }
 
-  .#{$prefix}--list-box--xl {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--list-box--xl,
+  .#{$prefix}--list-box--lg {
     height: rem(48px);
     max-height: rem(48px);
   }
@@ -572,7 +574,10 @@ $list-box-menu-width: rem(300px);
     max-height: rem(220px);
   }
 
+  // TODO V11: Remove xl selector
   .#{$prefix}--list-box--expanded.#{$prefix}--list-box--xl
+    .#{$prefix}--list-box__menu,
+  .#{$prefix}--list-box--expanded.#{$prefix}--list-box--lg
     .#{$prefix}--list-box__menu {
     // 48px item height * 5.5 items shown
     max-height: rem(264px);
@@ -613,7 +618,9 @@ $list-box-menu-width: rem(300px);
     height: rem(32px);
   }
 
-  .#{$prefix}--list-box--xl .#{$prefix}--list-box__menu-item {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--list-box--xl .#{$prefix}--list-box__menu-item,
+  .#{$prefix}--list-box--lg .#{$prefix}--list-box__menu-item {
     height: rem(48px);
   }
 
@@ -702,7 +709,9 @@ $list-box-menu-width: rem(300px);
     padding-bottom: rem(7px);
   }
 
-  .#{$prefix}--list-box--xl .#{$prefix}--list-box__menu-item__option {
+  // TODO V11: Remove xl selector
+  .#{$prefix}--list-box--xl .#{$prefix}--list-box__menu-item__option,
+  .#{$prefix}--list-box--lg .#{$prefix}--list-box__menu-item__option {
     height: rem(48px);
     padding-top: rem(15px);
     padding-bottom: rem(15px);
@@ -823,9 +832,14 @@ $list-box-menu-width: rem(300px);
     bottom: 2rem;
   }
 
+  // TODO V11: Remove xl selector
   .#{$prefix}--list-box--up.#{$prefix}--dropdown--xl
     .#{$prefix}--list-box__menu,
   .#{$prefix}--list-box--up.#{$prefix}--list-box--xl
+    .#{$prefix}--list-box__menu,
+  .#{$prefix}--list-box--up.#{$prefix}--dropdown--lg
+    .#{$prefix}--list-box__menu,
+  .#{$prefix}--list-box--up.#{$prefix}--list-box--lg
     .#{$prefix}--list-box__menu {
     bottom: 3rem;
   }
