fix(text-input): correct padding when in warning state (#8394)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/text-input/_text-input.scss
+++ b/packages/components/src/components/text-input/_text-input.scss
@@ -142,7 +142,8 @@
       fill: $icon-01;
     }
 
-    .#{$prefix}--text-input--invalid {
+    .#{$prefix}--text-input--invalid,
+    .#{$prefix}--text-input--warning {
       padding-right: $carbon--spacing-08;
     }
 
