feat(storybook): update sass loaders and use dart-sass (#8228)
* feat(storybook): update sass loaders and use dart-sass

* fix(storybook): remove fast-sass-loader to support sass modules

* chore(project): update yarn cache and lockfile

* chore(project): run yarn dedupe

Co-authored-by: Taylor Jones <taylor.jones826@gmail.com>
Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>

--- a/packages/react/src/components/Grid/Grid-story.scss
+++ b/packages/react/src/components/Grid/Grid-story.scss
@@ -1,3 +1,5 @@
+@use '../../../../grid/scss/modules/css-grid';
+
 @import '~carbon-components/scss/globals/scss/colors';
 
 // base of project work area
