feat(link): add support for icon with standalone links (#8361)
* feat(link): add support for icon with standalone links

* fix(link): correct alignment when disabled

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/components/link/_link.scss
+++ b/packages/components/src/components/link/_link.scss
@@ -25,6 +25,7 @@
     @include reset;
     @include type-style('body-short-01');
 
+    display: inline-flex;
     color: $link-primary;
     text-decoration: none;
     outline: none;
@@ -60,7 +61,6 @@
     @include reset;
     @include type-style('body-short-01');
 
-    display: inline;
     color: $text-disabled;
     font-weight: 400;
     text-decoration: none;
@@ -94,6 +94,12 @@
 
   .#{$prefix}--link--lg {
     @include type-style('body-short-02');
+  }
+
+  .#{$prefix}--link__icon {
+    display: inline-flex;
+    align-self: center;
+    margin-left: $spacing-03;
   }
 }
 
