fix(CodeSnippet): right-align overflow indicator if no copy button (#8442)
* fix(CodeSnippet): right-align overflow indicator if no copy button

* fix(CodeSnippet): use last-child instead of new class

* style(CodeSnippet): use exisiting class

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/code-snippet/_code-snippet.scss
+++ b/packages/components/src/components/code-snippet/_code-snippet.scss
@@ -502,6 +502,11 @@
     right: $carbon--spacing-08;
   }
 
+  .#{$prefix}--snippet--single.#{$prefix}--snippet--no-copy
+    .#{$prefix}--snippet__overflow-indicator--right {
+    right: 0;
+  }
+
   .#{$prefix}--snippet--single
     .#{$prefix}--snippet-container:focus
     ~ .#{$prefix}--snippet__overflow-indicator--right {
