feat(styles): add initial entrypoints and tests for styles (#8400)
* feat(styles): add updated motion package, docs, and tests

* chore(styles): add tests for colors

* feat(styles): add additional flags for config and add tests

* chore(styles): add snapshots

* docs(style): add testing style guide and recipes

* feat(styles): add additional entrypoints and tests

* docs(style): update README and package.json with description

* fix(styles): update entrypoint

* chore(grid): update tests for grid

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/_breakpoint.scss
+++ b/packages/styles/scss/_breakpoint.scss
@@ -5,4 +5,5 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward '@carbon/themes/scss/modules/themes' show $white, $g10, $g90, $g100;
+@forward '@carbon/grid/scss/modules/breakpoint'
+  show breakpoint, breakpoint-between, breakpoint-down, breakpoint-up;
