fix(modal): set pagination background color within modals (#8434)
* fix(modal): set pagination background color within modals

* docs(Modal): add temporary pagination component to stories

* docs(Modal): add prop name to knob

* Revert "docs(Modal): add temporary pagination component to stories"

This reverts commit 85f9e424c7ee4f869bee3defb86db4dadc477f8a.

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -50,6 +50,8 @@
     }
 
     // V11: Question for design: do we have an updated tokens for fields that exist on `layer`?
+    .#{$prefix}--pagination,
+    .#{$prefix}--pagination__control-buttons,
     .#{$prefix}--text-input,
     .#{$prefix}--text-area,
     .#{$prefix}--search-input,
