feat(DataTable): update size prop, add md size (#8452)
* feat(DataTable): update size prop, add md size

* chore(snapshot): update snapshots

* feat(DataTable): update OverflowMenu in md

* docs(DataTable): move lg before - default

* chore(storybook): remove old props

--- a/packages/components/src/components/data-table/_data-table-expandable.scss
+++ b/packages/components/src/components/data-table/_data-table-expandable.scss
@@ -228,7 +228,9 @@
     }
   }
 
-  .#{$prefix}--data-table--tall .#{$prefix}--table-expand__button {
+  // V11: remove tall
+  .#{$prefix}--data-table--tall .#{$prefix}--table-expand__button,
+  .#{$prefix}--data-table--xl .#{$prefix}--table-expand__button {
     padding-top: rem(16px);
     padding-bottom: rem(24px);
   }
