feat(button): update Button size prop (#8459)
* feat(Button): start size work on Button

* feat(Button): finish size prop update

* feat(Button): revert xl, 2xl changes

* feat(Button): update size table

* feat(Button): add xl, 2xl updates behind feature flag

* test(Button): update tests, snapshots

* fix(Button): revert classname changes

* test(Button): update tests

* docs(Button): remove size prop story

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/button/_button.scss
+++ b/packages/components/src/components/button/_button.scss
@@ -138,7 +138,9 @@
       padding: $button-padding-ghost-sm;
     }
 
-    &.#{$prefix}--btn--field {
+    // V11: remove field
+    &.#{$prefix}--btn--field,
+    &.#{$prefix}--btn--md {
       padding: $button-padding-ghost-field;
     }
   }
@@ -329,7 +331,9 @@
     cursor: not-allowed;
   }
 
-  .#{$prefix}--btn--field.#{$prefix}--btn--icon-only {
+  // V11: remove field
+  .#{$prefix}--btn--field.#{$prefix}--btn--icon-only,
+  .#{$prefix}--btn--md.#{$prefix}--btn--icon-only {
     padding-right: rem(11px);
     padding-left: rem(11px);
   }
@@ -432,7 +436,9 @@
         padding: $button-padding-ghost-sm;
       }
 
-      &.#{$prefix}--btn--field {
+      // V11: Remove field
+      &.#{$prefix}--btn--field,
+      &.#{$prefix}--btn--md {
         padding: $button-padding-ghost-field;
       }
     }
@@ -443,19 +449,23 @@
     padding: $button-padding-sm;
   }
 
+  // V11: change xl to 2xl
   .#{$prefix}--btn--xl:not(.#{$prefix}--btn--icon-only) {
     @include button-padding-large;
 
     min-height: rem(80px);
   }
 
+  // V11: change lg to xl
   .#{$prefix}--btn--lg:not(.#{$prefix}--btn--icon-only) {
     @include button-padding-large;
 
     min-height: rem(64px);
   }
 
-  .#{$prefix}--btn--field {
+  // V11: Remove field
+  .#{$prefix}--btn--field,
+  .#{$prefix}--btn--md {
     min-height: rem(40px);
     padding: $button-padding-field;
   }
