feat(PasswordInput): support `warn` and `inline` props (#8366)
* feat(PasswordInput): support `warn` prop

* feat(PasswordInput): support `inline` prop

* fix(text-input): realign inline text input elements

* docs(TextInput): format proptypes

* chore: update snapshots

* fix(text-input): remove center alignment

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/text-input/_text-input.scss
+++ b/packages/components/src/components/text-input/_text-input.scss
@@ -160,6 +160,11 @@
     }
   }
 
+  .#{$prefix}--text-input__field-wrapper.#{$prefix}--password-input__field-wrapper
+    .#{$prefix}--text-input__invalid-icon {
+    right: $carbon--spacing-07;
+  }
+
   .#{$prefix}--password-input-wrapper .#{$prefix}--text-input__invalid-icon {
     right: $carbon--spacing-08;
   }
